feat: Add comprehensive NiFi management system
- Add NiFi environment configuration (config/nifi_env.sh)
- Create NiFi control script with start/stop/restart/status commands
- Add Python NiFi manager utility with full API integration
- Implement CLI interface for NiFi management
- Add quick command shortcuts for common operations
- Create comprehensive NiFi setup documentation
- Update project configuration with NiFi paths
- Add YAML configuration for NiFi processors and templates

Features:
- Shell-based NiFi control with colored output
- Python-based NiFi manager with API integration
- CLI interface with Click framework
- Automatic health checks and API testing
- Log monitoring and following capabilities
- Data cleanup utilities
- Comprehensive error handling and validation

This enables seamless local NiFi management for the LLM-based
dataflow generation system.

--- a/config/env.example
+++ b/config/env.example
@@ -20,11 +20,16 @@ REDIS_PASSWORD=
 REDIS_DB=0
 
 # NiFi Configuration
+NIFI_HOME=/Users/kikim/Downloads/nifi-2.4.0
 NIFI_BASE_URL=http://localhost:8080/nifi-api
+NIFI_WEB_HTTP_HOST=localhost
+NIFI_WEB_HTTP_PORT=8080
 NIFI_USERNAME=
 NIFI_PASSWORD=
 NIFI_VERIFY_SSL=false
 NIFI_TIMEOUT=30
+NIFI_JVM_HEAP_INIT=512m
+NIFI_JVM_HEAP_MAX=2g
 
 # LLM Provider Configuration
 # OpenAI
