feat: Implement UV-based dependency management and Cursor Rules
## UV Dependency Management
- Migrate from pip to UV for ultra-fast package management
- Set Python version to 3.11 with .python-version file
- Create organized dependency groups:
  - llm: OpenAI, Anthropic, Google Gemini, Ollama
  - nifi: psutil for NiFi process management
  - dev: pytest, black, isort, mypy, flake8, pre-commit
  - docs: mkdocs, mkdocs-material, mkdocstrings
- Generate uv.lock for reproducible builds
- Update pyproject.toml with proper UV configuration

## Cursor Rules Implementation
- Add comprehensive MCP tools usage guidelines
- Prioritize Context7-MCP for technical documentation
- Integrate Sequential Thinking tools for complex development
- Include DuckDuckGo MCP for information gathering
- Create dependency management rules for UV usage
- Establish project development workflow guidelines

## Benefits
- 10-100x faster package installation with UV
- Improved dependency resolution and conflict handling
- Organized dependency groups for selective installation
- Enhanced development workflow with proper tooling
- Clear guidelines for AI-assisted development

This establishes a modern, efficient development environment
optimized for LLM-based Apache NiFi dataflow generation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: System :: Distributed Computing",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.104.1",
     "uvicorn[standard]>=0.24.0",
@@ -44,6 +44,7 @@ dependencies = [
     "structlog>=23.2.0",
     "click>=8.1.7",
     "rich>=13.7.0",
+    "typer>=0.17.4",
 ]
 
 [project.optional-dependencies]
@@ -189,3 +190,30 @@ exclude_lines = [
 [tool.bandit]
 exclude_dirs = ["tests"]
 skips = ["B101", "B601"]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "flake8>=7.3.0",
+    "isort>=6.0.1",
+    "mypy>=1.18.1",
+    "pre-commit>=4.3.0",
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "pytest-cov>=7.0.0",
+    "pytest-mock>=3.15.0",
+]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.19",
+    "mkdocstrings[python]>=0.30.0",
+]
+llm = [
+    "anthropic>=0.67.0",
+    "google-generativeai>=0.8.5",
+    "ollama>=0.5.3",
+    "openai>=1.107.2",
+]
+nifi = [
+    "psutil>=7.0.0",
+]
