feat: Implement comprehensive NiFi MCP Server with natural language interface
## Major Features Implemented

### 1. NiFi MCP (Model Context Protocol) Server
- Complete natural language to NiFi API translation
- Support for all major NiFi operations (process groups, processors, connections, templates)
- Intent detection with confidence scoring
- Session management and context tracking
- RESTful API with FastAPI framework

### 2. Advanced Natural Language Processing
- Multi-provider LLM support (OpenAI, Anthropic, Google Gemini)
- Intelligent intent extraction with 20+ supported intents
- Pattern matching fallback for offline operation
- Comprehensive parameter extraction from natural language

### 3. Comprehensive NiFi API Client
- Async HTTP client with full NiFi REST API coverage
- Process group, processor, connection, and template management
- Search capabilities and system diagnostics
- Error handling with retries and proper authentication

### 4. Interactive Chat Interface
- Streamlit-based web UI for natural language queries
- Real-time NiFi status monitoring
- Example queries and help system
- Data visualization for NiFi components

### 5. Robust CLI and Management Tools
- Multi-command CLI with server, UI, and utility functions
- NiFi health checking and status monitoring
- Configuration management with environment variable support
- Development and testing utilities

## Technical Implementation

### Architecture
- Modular design with clear separation of concerns
- Async/await throughout for optimal performance
- Comprehensive error handling and logging
- Type hints and Pydantic models for data validation

### Supported NiFi Operations
- List/create/delete process groups
- List/create/start/stop processors
- Manage connections and templates
- Search components across the instance
- System status and diagnostics
- Processor documentation access

### Natural Language Examples
- 'List all process groups'
- 'Create a GetFile processor'
- 'Start the data processin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -214,6 +214,15 @@ llm = [
     "ollama>=0.5.3",
     "openai>=1.107.2",
 ]
+mcp = [
+    "fastapi>=0.116.1",
+    "httpx>=0.28.1",
+    "pydantic>=2.11.9",
+    "uvicorn[standard]>=0.35.0",
+]
 nifi = [
     "psutil>=7.0.0",
+]
+ui = [
+    "streamlit>=1.49.1",
 ]
