feat: Update NiFi and Streamlit port configurations
- Change NiFi API from HTTP 8080 to HTTPS 8443
- Change Streamlit UI port from 8501 to 9501
- Update all configuration files, documentation, and examples
- Ensure SSL verification is disabled for local development

Files updated:
- src/mcp/nifi_mcp_server.py
- src/nifi/api_client.py
- src/utils/config.py
- src/main.py
- config/nifi_env.sh
- config/nifi_config.yaml
- config/env.example
- docs/NIFI_SETUP.md
- examples/test_mcp_server.py
- README.md

--- a/config/nifi_config.yaml
+++ b/config/nifi_config.yaml
@@ -16,7 +16,7 @@ nifi:
   
   # API configuration
   api:
-    base_url: "http://localhost:8080/nifi-api"
+    base_url: "https://localhost:8443/nifi-api"
     timeout: 30
     verify_ssl: false
     
