--- a/config/env.example
+++ b/config/env.example
@@ -21,7 +21,7 @@ REDIS_DB=0
 
 # NiFi Configuration
 NIFI_HOME=/Users/kikim/Downloads/nifi-2.4.0
-NIFI_BASE_URL=http://localhost:8080/nifi-api
+NIFI_BASE_URL=https://localhost:8443/nifi-api
 NIFI_WEB_HTTP_HOST=localhost
 NIFI_WEB_HTTP_PORT=8080
 NIFI_USERNAME=
